--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,158 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+  margin: 0;
+}
+
+.header {
+  background-color: #000;
+  width: 100%;
+  height: 70px;
+}
+
+.header-inner {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.header-inner-left {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+}
+
+.searchbox {
+  position: relative;
+  margin-left: 30px;
+}
+
+.search {
+  margin-right: 5px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5%;
+  outline: 0;
+}
+
+.header i {
+  position: absolute;
+  top: 2px;
+  left: -30px;
+  font-size: 18px;
+  background-color: #fff;
+  padding: 10px;
+}
+
+.header-inner-right {
+  font-size: 16px;
+  margin-left: auto;
+  margin-right: 40px;
+}
+
+.signin-btn {
+  border-radius: 5%;
+  text-decoration: none;
+  color: #fff;
+  background-color: #4a90e2;
+  padding: 10px;
+  margin-right: 15px;
+}
+
+.signup-btn {
+  border-radius: 5%;
+  text-decoration: none;
+  color: #fff;
+  background-color: #6c757d;
+  padding: 10px;
+  transition: 0.2s;
+}
+
+.signup-btn:hover {
+  color: #fff;
+  background-color: #5a6268;
+  transition: 0.2s;
+}
+
+main {
+  width: 100%;
+}
+
+.footer {
+  width: 100%;
+  height: 180px;
+  margin-top: 64px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  background-color: #111;
+  box-sizing: border-box;
+  color: #fff;
+  text-align: center;
+}
+
+.copyright {
+  font-size: 14px;
+}
+
+.sign-wrapper {
+  margin: 0 auto;
+  margin-top: 40px;
+  background-color: #fff;
+  width: 600px;
+  height: auto;
+  border-radius: 4px;
+  box-shadow: rgba(21, 27, 38, 0.15) 0px 1px 3px 0px;
+  text-align: center;
+}
+
+.sign-title {
+  padding: 25px 0 5px 0;
+}
+
+.field::before {
+  content: "必須";
+  background-color: #ff0000a8;
+  font-size: 13px;
+  color: #fff;
+  border-radius: 4px;
+  padding: 4px;
+  margin-right: 6px;
+}
+
+.sign-input {
+  padding: 8px;
+  margin: 5px 0;
+  width: 290px;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  font-size: 16px;
+  outline: 0;
+}
+
+.sign-submit {
+  padding: 7px;
+  width: 350px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #4a90e2;
+  font-size: 16px;
+  border: 0px;
+  cursor: pointer;
+  margin: 15px 0;
+}
+
+.other {
+  padding-bottom: 30px;
+}
+
+.already-account {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.create-account {
+  text-decoration: none;
+  color: #007bff;
+}
