--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -168,3 +168,10 @@ main {
   text-decoration: none;
   color: #007bff;
 }
+
+.icon {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+}
