--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,6 +4,16 @@
 <%= render "users/shared/error_messages", resource: resource %>
 
 <div class="field">
+  <% if current_user.image? %>
+  <%= image_tag current_user.image.url(:thumb) ,class: "icon"%>
+  <% else %>
+  <%= image_tag "default.jpg" ,class: "icon" %>
+  <% end %>
+  <%= f.label :image ,"アイコン" %><br />
+  <%= f.file_field :image %>
+</div>
+
+<div class="field">
   <%= f.label :username ,"名前" %><br />
   <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
 </div>
@@ -23,11 +33,11 @@
   <%= f.password_field :password, autocomplete: "new-password" %>
   <%
 =begin%>
- <% if @minimum_password_length %>
+  <% if @minimum_password_length %>
   <br />
   <em><%= @minimum_password_length %> characters minimum</em>
-  <% end %> 
-<%
+  <% end %>
+  <%
 =end%>
 </div>
 
