--- a/app/views/users/registrations/account_index.html.erb
+++ b/app/views/users/registrations/account_index.html.erb
@@ -1,32 +1,44 @@
 <main>
-  <div class="sign-wrapper">
 
-    <div class="sign-title">
-      <p>アカウント</p>
+  <div class="setting-wrapper">
+
+    <div class="account-title-container">
+      <div class="account-title-main">
+        <%= link_to "アカウント", account_user_registration_path, {class: "account-title-main-a"} %>
+      </div>
+      <div class="profile-title">
+        <%= link_to "プロフィール", profile_user_registration_path, {class: "profile-title-a"} %>
+      </div>
     </div>
 
-    <div class="field-box">
+    <div class="account-container">
+      <div class="account-box">
 
-      <div class="field">
-        <p>メールアドレス</p>
-        <div class="email">
-          <%= current_user.email %>
+        <div class="account-box-title">
+          <p class="account-box-title-p">
+            アカウント
         </div>
-      </div>
 
-      <div class="field">
-        <p>パスワード</p>
-        <div class="password">
-          <%= current_user.password %>
-          <p>********</p>
+        <div class="account-field">
+          <p>メールアドレス</p>
+          <div class="account-email">
+            <%= current_user.email %>
+          </div>
         </div>
-      </div>
 
-      <div class="actions">
-        <%= link_to "編集", edit_user_registration_path %>
-        <%= link_to "プロフィール", profile_user_registration_path %>
-      </div>
+        <div class="account-field">
+          <p>パスワード</p>
+          <div class="account-password">
+            <%= current_user.password %>
+            <p>********</p>
+          </div>
+        </div>
 
+        <div class="setting-action">
+          <%= link_to "編集", edit_user_registration_path, {class: "setting-btn"} %>
+        </div>
+        
+      </div>
     </div>
   </div>
 </main>
