--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -115,3 +115,145 @@
   object-fit: cover;
   border-radius: 5px;
 }
+
+.newroom {
+  min-height: 100vh;
+  display: flex;
+}
+
+.newroom-side {
+  border-right: 3px solid #e2e2e2;
+  background-color: #fff;
+  width: 15%;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.side-title-box {
+  margin-right: 20px;
+  border-right: 3px solid #4a90e2;
+  padding: 5px 20px 5px 5px;
+}
+
+.side-title {
+  color: #4a90e2;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.newroom-wrapper {
+  background-color: #F6F8F9;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.newroom-container {
+  background-color: #fff;
+  width: 60%;
+  border: 2px solid #EBEDEF;
+  margin: 60px 0;
+  height: auto;
+}
+
+.newroom-title {
+  padding: 10px 0 10px 20px;
+}
+
+.newroom-title p {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.newroom-tables {}
+
+.newroom-box {
+  display: flex;
+  border-top: 1px solid #eaedef;
+  margin: 0 15px 0 15px;
+  padding-top: 10px;
+}
+
+.newroom-box-last {
+  display: flex;
+  border-top: 1px solid #eaedef;
+  border-bottom: 1px solid #eaedef;
+  margin: 0 15px 0 15px;
+  padding-top: 10px;
+}
+
+.room-label {
+  padding: 10px 100px 10px 20px;
+  margin-right: 30px;
+}
+
+.room-label-first {
+  padding: 10px 100px 10px 20px;
+  margin-right: 40px;
+}
+
+.room-label-second {
+  padding: 10px 100px 10px 20px;
+  margin-right: 25px;
+}
+
+.room-label-third {
+  padding: 10px 100px 10px 20px;
+  margin-right: 75px;
+}
+
+.room-label-text {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.room-label-text::after {
+  content: "必須";
+  background-color: #ff0000a8;
+  font-size: 13px;
+  color: #fff;
+  border-radius: 4px;
+  padding: 4px;
+  margin-left: 6px;
+}
+
+.room-field-box {
+  padding: 10px 15px 50px 0;
+  width: 550px;
+}
+
+.room-field {
+  padding: 7px;
+  width: 100%;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ced4da;
+}
+
+.room-field-last {
+  font-size: 16px;
+}
+
+.room-field-long {
+  padding: 7px 7px 150px 7px;
+  width: 100%;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ced4da;
+}
+
+.newroom-submit {
+  margin-left: 40px;
+}
+
+.newroom-btn {
+  width: 150px;
+  padding: 7px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #4a90e2;
+  font-size: 16px;
+  border: 0px;
+  cursor: pointer;
+  margin: 15px 0;
+}
