投稿機能実装中

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -165,8 +165,6 @@
   font-weight: 500;
 }
 
-.newroom-tables {}
-
 .newroom-box {
   display: flex;
   border-top: 1px solid #eaedef;
@@ -256,4 +254,70 @@
   border: 0px;
   cursor: pointer;
   margin: 15px 0;
+}
+
+.room-search-wrapper {
+  min-height: 100vh;
+}
+
+.room-count p {
+  font-size: 22px;
+  margin-left: 70px;
+}
+
+.room-chart {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1550px;
+  margin: 0 auto;
+}
+
+.room-select {
+  max-width: 25%;
+  margin: 15px 15px;
+  border: 1px solid #e2e2e2;
+}
+
+.room-link {
+  text-decoration: none;
+}
+
+.room-image-select {
+  width: 100%;
+  height: 180px;
+  margin-top: 20px;
+}
+
+.room-image-box {
+  width: 350px;
+  background-color: #F6F8F9;
+  height: 200px;
+}
+
+.room-name-select {
+  color: #909090;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 5px 0 0 10px;
+}
+
+.room-address-select {
+  font-size: 16px;
+  color: #000;
+  font-weight: 700;
+  margin: 5px 0 0 10px;
+}
+
+.room-price-select {
+  text-align: right;
+  letter-spacing: 1.5px;
+  font-size: 16px;
+  color: #000;
+  margin: 5px 10px 10px 0;
+}
+
+.room-price-select::before {
+  content: "¥";
+  font-size: 16px;
+  color: #000;
 }
