--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -15,7 +15,7 @@
           <p>ルーム情報登録</p>
         </div>
 
-        <%= form_for @room, url: new_room_path do |f| %>
+        <%= form_for @room, url: room_path do |f| %>
 
         <div class="newroom-tables">
           <div class="newroom-box">
