--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,15 @@
       <div class="header-inner-left">
         <%= link_to image_tag("/assets/logo.png"), "/top" %>
         <div class="searchbox">
-          <input type="text" class="search" placeholder="エリア">
+          <%= search_form_for @search, url: index_room_path do |f| %>
+          <%= f.text_field :room_address_cont, placeholder: "エリア", class: "search" %>
+          <% end %>
           <i class="fas fa-map-marker-alt"></i>
         </div>
         <div class="searchbox">
-          <input type="text" class="search" placeholder="キーワード">
+          <%= search_form_for @search, url: index_room_path do |f| %>
+          <%= f.text_field :room_name_or_room_introduction_or_room_address_cont, placeholder: "キーワード", class: "search" %>
+          <% end %>
           <i class="fas fa-search"></i>
         </div>
       </div>
@@ -35,9 +39,9 @@
         <input type="checkbox" id="hamburger-btn-check">
         <label for="hamburger-btn-check" class="hamburger-btn">
           <% if current_user.image? %>
-          <%= image_tag current_user.image.url(:thumb), class: "top-icon" %>
+          <%= image_tag current_user.image.url(:thumb), class: "top-icon", alt: "アイコン" %>
           <% else %>
-          <%= image_tag "default.jpg" ,class: "top-icon" %>
+          <%= image_tag "default.jpg" ,class: "top-icon", alt: "アイコン" %>
           <% end %>
         </label>
         <div class="hamburger">
