--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -46,7 +46,7 @@
             <h2>アカウント削除</h2>
           </div>
           <div class="delete-btn">
-            <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "delete-btn-action" %>
+            <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "アカウントを削除しますか?" }, method: :delete, class: "delete-btn-action" %>
           </div>
         </div>
       </div>
