--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -47,15 +47,17 @@
   }
 
   &-btn {
-    width: 460px;
+    width: 475px;
     height: 20px;
     color: #fff;
     border-radius: 5px;
     text-decoration: none;
     background-color: #4a90e2;
-    padding: 10px;
+    padding: 10px 10px 30px 10px;
     margin-bottom: 10px;
     text-align: center;
+    border: 0px;
+    cursor: pointer;
   }
 }
 
