--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
           <ul class="menu">
             <li class="menu-list"><%= link_to("ルーム登録", new_room_path, class: "menu-list-a") %></li>
             <li class="menu-list"><%= link_to("予約済みルーム一覧", "/top", class: "menu-list-a") %></li>
-            <li class="menu-list"><%= link_to("登録済みルーム一覧", "/top", class: "menu-list-a") %></li>
+            <li class="menu-list"><%= link_to("登録済みルーム一覧", post_room_path, class: "menu-list-a") %></li>
             <li class="menu-list"><%= link_to("設定", account_user_registration_path, {class: "menu-list-a"}) %></li>
             <li class="menu-list"><%= link_to("ログアウト", destroy_user_session_path, {method: :delete, class: "menu-list-a"}) %></li>
           </ul>
