--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -7,13 +7,13 @@
     <div class="room-chart">
       <% @search_articles.each do |s| %>
       <div class="room-select">
-        <%= link_to "/top", class: "room-link" do %>
+      <%= link_to room_path, class: "room-link" do %>
         <div class="room-image-box">
-        <% if s.room_image? %>
-        <img src="<%= s.room_image %>" class="room-image-select" alt="部屋画像">
-        <% else %>
-        <%= image_tag "default.jpg", alt: "部屋画像" %>
-        <% end %>
+          <% if s.room_image? %>
+          <img src="<%= s.room_image %>" class="room-image-select" alt="部屋画像">
+          <% else %>
+          <%= image_tag "default.jpg", alt: "部屋画像" %>
+          <% end %>
         </div>
         <div class="room-text-box">
           <p class="room-name-select"><%= s.room_name %></p>
