--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -7,7 +7,7 @@
     <div class="room-chart">
       <% @search_articles.each do |s| %>
       <div class="room-select">
-      <%= link_to room_path, class: "room-link" do %>
+      <%= link_to edit_room_path(s), class: "room-link" do %>
         <div class="room-image-box">
           <% if s.room_image? %>
           <img src="<%= s.room_image %>" class="room-image-select" alt="部屋画像">
