--- a/app/assets/stylesheets/reservation.scss
+++ b/app/assets/stylesheets/reservation.scss
@@ -1,3 +1,52 @@
 // Place all the styles related to the reservation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.reservation-form-page {
+  margin: 0 auto;
+  width: 1400px;
+  min-height: 100vh;
+}
+
+.reservation-form-box {
+  background-color: #F6F8F9;
+  text-align: center;
+  width: 700px;
+  padding: 30px;
+  margin: 0 auto;
+  border: 1px solid #e2e2e2;
+}
+
+.input-calendar {
+  width: 300px;
+  height: 30px;
+  padding: 5px 5px 5px 10px;
+  border-radius: 5px;
+  border: 1px solid #e2e2e2;
+  font-size: 18px;
+}
+
+.input-count {
+  width: 300px;
+  height: 30px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #e2e2e2;
+  font-size: 18px;
+}
+
+.reservation-submit {
+  margin-top: 20px;
+}
+
+.reservation-btn {
+  padding: 7px;
+  width: 380px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #4a90e2;
+  font-size: 16px;
+  border: 0px;
+  cursor: pointer;
+  margin: 15px 0;
+}
