--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -323,3 +323,64 @@
   font-size: 16px;
   color: #000;
 }
+
+.room-post-wrapper {
+  display: flex;
+  width: 1400px;
+  margin: auto;
+  margin-left: 250px;
+  padding: 20px 0;
+}
+
+.room-post-box {
+  width: 50%;
+}
+
+.post-image {
+  width: 100%;
+  height: 400px;
+}
+
+.room-post-user {
+  display: flex;
+}
+
+.user-link {
+  display: contents;
+}
+
+.room-post-icon {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+  position: relative;
+  margin-left: 20px;
+  margin-top: 25px;
+}
+
+.room-post-information {
+  margin-left: 15px;
+}
+
+.room-post-introduction {
+  width: 100%;
+  padding: 30px 0;
+  border-top: 1px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+  line-height: 1.8;
+}
+
+.room-reservation-box {
+  margin-left: 50px;
+  background-color: #F6F8F9;
+  padding: 25px 25px 25px 30px;
+  height: 150px;
+  border: 1px solid #e2e2e2;
+}
+
+.room-post-price {
+  font-size: 20px;
+  font-weight: 700;
+}
+
