--- a/app/views/reservation/new.html.erb
+++ b/app/views/reservation/new.html.erb
@@ -1,19 +1,33 @@
 <main>
 
-  <h1>予約画面</h1>
+  <div class="reservation-form-page">
 
-  <p>¥<%= @room.room_price %>／日</p>
+    <div class="reservation-title">
+      <h2>ルーム予約画面</h2>
+    </div>
 
-  <%= form_for [@room, @reservation], url: room_reservation_confirm_path(@room), local: true do |f| %>
-  
-  <p>開始日</p>
-  <%= f.date_field :start %>
-  <p>終了日</p>
-  <%= f.date_field :finish %>
-  <p>人数</p>
-  <%= f.number_field :count %>
+    <div class="reservation-form-box">
 
-  <%= f.submit "確認画面へ進む" %>
-  <% end %>
+      <div class="reservation-price">
+        <p class="room-post-price">¥<%= @room.room_price %>／日</p>
+      </div>
+
+      <%= form_for [@room, @reservation], url: room_reservation_confirm_path(@room), local: true do |f| %>
+
+      <div class="reservation-form">
+        <p class="form-text">開始日</p>
+        <%= f.date_field :start, class: "input-calendar" %>
+        <p class="form-text">終了日</p>
+        <%= f.date_field :finish, class: "input-calendar" %>
+        <p class="form-text">人数</p>
+        <%= f.number_field :count, class: "input-count" %>
+
+        <div class="reservation-submit"><%= f.submit "確認画面へ進む", class: "reservation-btn" %></div>
+      </div>
+      <% end %>
+
+    </div>
+
+  </div>
 
 </main>
