--- a/app/views/reservation/new.html.erb
+++ b/app/views/reservation/new.html.erb
@@ -5,6 +5,7 @@
     <div class="reservation-title">
       <h2>ルーム予約画面</h2>
     </div>
+    <%= render "users/shared/error_reservation", obj: @reservation %>
 
     <div class="reservation-form-box">
 
