--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,5 +1,4 @@
 <main>
-
   <div class="newroom">
 
     <div class="newroom-side">
@@ -10,6 +9,7 @@
 
     <div class="newroom-wrapper">
       <div class="newroom-container">
+        <%= render "users/shared/error_room", obj: @room %>
 
         <div class="newroom-title">
           <p>ルーム情報登録</p>
