--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,11 +19,19 @@ body {
 }
 
 .notice {
+  padding: 0;
+  margin: 0;
   z-index: 2;
+  background-color: skyblue;
+  text-align: center;
 }
 
 .alert {
+  padding: 0;
+  margin: 0;
   z-index: 2;
+  background-color: rgb(241, 126, 126);
+  text-align: center;
 }
 
 .header {
